Added slight restrictions to web security config.